--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
-    "jest": "^27.5.1",
-    "ts-jest": "^29.1.0"
+    "jest": "^27.5.1"
   }
 }
